Triple can be removed; Pair can be a record